kubernetes/infrastructure/networking/envoy-gateway/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: envoy-gateway-system
  labels:
    app.kubernetes.io/name: envoy-gateway
    app.kubernetes.io/part-of: envoy
