kubernetes/infrastructure/networking/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: edge-gateway
  namespace: envoy-gateway-system
  labels:
    app.kubernetes.io/name: edge-gateway
spec:
  gatewayClassName: envoy
  listeners:
    - name: https
      hostname: "*.${SECRET_DOMAIN}"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-apps-cert
    - name: http-redirect
      hostname: "*.${SECRET_DOMAIN}"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
